# web-rte

./: .gitignore
editor-wasm/: Cargo.toml
editor-wasm/src/: home_toolbar.rs  lib.rs
web-text-backend/: Cargo.toml
web-text-backend/src/: main.rs
web-text-backend/src/api/: user_api.rs
web-text-backend/src/models/: user.rs
web-text-backend/src/repository/: mongodb_repo.rs
web-text-editor/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
web-text-editor/src/: index.html
web-text-editor/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
web-text-editor/src/app/api/commands/: command.ts  undoable.ts
web-text-editor/src/app/core/editorFSM/: GuestState.ts
web-text-editor/src/app/core/impl/: EditorContext.ts  EventCore.ts  WasmLoader.ts  editor.ts
web-text-editor/src/app/core/interfaces/: EditorState.ts  receiver.ts
web-text-editor/src/app/editor-base/: editor-base.component.css  editor-base.component.html  editor-base.component.spec.ts  editor-base.component.ts
web-text-editor/src/app/impl/: CommentHandler.ts  SearchManagerProxy.ts  StyleHandler.ts  UndoRedoManager.ts
web-text-editor/src/app/impl/commands/: InlineStyle.ts  comment.ts  find.ts  redo.ts  replace.ts  replaceall.ts  reply.ts  typing.ts  undo.ts
web-text-editor/src/app/services/: common.service.ts
web-text-editor/src/app/types/: CommentContainer.ts  CommentReply.ts  TypingAction.ts  comment.box.ts
