[package]
name = "web-text-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
serde_json = "1.0.128"
bson = "2.13.0"
actix-cors = "0.7.0"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]
